crates/dstu-core-capi/include/dstu_core.h


typedef enum {
  DSTU_OK = 0,
  DSTU_ERR_RANDOM = 1,
  DSTU_ERR_TAG_MISMATCH = 2,
  DSTU_ERR_TRUNCATED = 3,
  DSTU_ERR_INVALID_LENGTH = 4,
  DSTU_ERR_BUFFER_TOO_SMALL = 5,
  DSTU_ERR_UNKNOWN_TAG = 6,
  DSTU_ERR_FINALIZED = 7,
  DSTU_ERR_SELFTEST_FAILED = 8,
  DSTU_ERR_HASH_ERROR = 9,
  DSTU_ERR_INVALID_KEY = 10,
  DSTU_ERR_NULL_POINTER = 11,
  DSTU_ERR_PANIC = 12,
} DstuStatus;
typedef enum {
  DSTU_PWHASH_INTERACTIVE = 0,
  DSTU_PWHASH_MODERATE = 1,
  DSTU_PWHASH_SENSITIVE = 2,
} DstuPwhashStrength;
typedef enum {
  DSTU_TAG_MESSAGE = 0,
  DSTU_TAG_PUSH = 1,
  DSTU_TAG_REKEY = 2,
  DSTU_TAG_FINAL = 3,
} DstuTag;
typedef struct DstuAuthKey DstuAuthKey;
typedef struct DstuBoxPublicKey DstuBoxPublicKey;
typedef struct DstuBoxSecretKey DstuBoxSecretKey;
typedef struct DstuKdfMasterKey DstuKdfMasterKey;
typedef struct DstuKupyna256Hasher DstuKupyna256Hasher;
typedef struct DstuKupyna512Hasher DstuKupyna512Hasher;
typedef struct DstuPullState DstuPullState;
typedef struct DstuPushState DstuPushState;
typedef struct DstuSecretboxKey DstuSecretboxKey;
typedef struct DstuSecretstreamKey DstuSecretstreamKey;
typedef struct DstuSigningKey DstuSigningKey;
typedef struct DstuStreamKey DstuStreamKey;
typedef struct DstuVerifyingKey DstuVerifyingKey;
 DstuStatus dstu_auth_key_generate(DstuAuthKey **out);
 DstuAuthKey *dstu_auth_key_from_bytes(const uint8_t *key);
 void dstu_auth_key_bytes(const DstuAuthKey *key, uint8_t *out);
 void dstu_auth_key_free(DstuAuthKey *key);
void dstu_auth(const DstuAuthKey *key,
               const uint8_t *message,
               size_t message_len,
               uint8_t *tag_out);
DstuStatus dstu_auth_verify(const DstuAuthKey *key,
                            const uint8_t *message,
                            size_t message_len,
                            const uint8_t *tag);
 DstuStatus dstu_box_secretkey_generate(DstuBoxSecretKey **out);
 DstuStatus dstu_box_secretkey_from_bytes(const uint8_t *bytes, DstuBoxSecretKey **out);
 void dstu_box_secretkey_bytes(const DstuBoxSecretKey *key, uint8_t *out);
 DstuBoxPublicKey *dstu_box_secretkey_public_key(const DstuBoxSecretKey *key);
 void dstu_box_secretkey_free(DstuBoxSecretKey *key);
 DstuStatus dstu_box_publickey_from_bytes(const uint8_t *bytes, DstuBoxPublicKey **out);
 void dstu_box_publickey_bytes(const DstuBoxPublicKey *key, uint8_t *out);
 void dstu_box_publickey_free(DstuBoxPublicKey *key);
DstuStatus dstu_box_seal(const DstuBoxPublicKey *recipient,
                         const uint8_t *message,
                         size_t message_len,
                         uint8_t *sealed_out,
                         size_t sealed_out_cap,
                         size_t *sealed_len_out);
DstuStatus dstu_box_open(const DstuBoxSecretKey *secret,
                         const uint8_t *sealed,
                         size_t sealed_len,
                         uint8_t *plaintext_out,
                         size_t plaintext_out_cap,
                         size_t *plaintext_len_out);
 void dstu_generichash_256(const uint8_t *message, size_t message_len, uint8_t *out);
 void dstu_generichash_512(const uint8_t *message, size_t message_len, uint8_t *out);
 DstuKupyna256Hasher *dstu_kupyna256_hasher_new(void);
 void dstu_kupyna256_hasher_update(DstuKupyna256Hasher *hasher, const uint8_t *data, size_t len);
 DstuStatus dstu_kupyna256_hasher_finalize(DstuKupyna256Hasher *hasher, uint8_t *out);
 void dstu_kupyna256_hasher_free(DstuKupyna256Hasher *hasher);
 DstuKupyna512Hasher *dstu_kupyna512_hasher_new(void);
 void dstu_kupyna512_hasher_update(DstuKupyna512Hasher *hasher, const uint8_t *data, size_t len);
 DstuStatus dstu_kupyna512_hasher_finalize(DstuKupyna512Hasher *hasher, uint8_t *out);
 void dstu_kupyna512_hasher_free(DstuKupyna512Hasher *hasher);
 DstuStatus dstu_kdf_master_key_generate(DstuKdfMasterKey **out);
 DstuKdfMasterKey *dstu_kdf_master_key_from_bytes(const uint8_t *key);
 void dstu_kdf_master_key_bytes(const DstuKdfMasterKey *key, uint8_t *out);
 void dstu_kdf_master_key_free(DstuKdfMasterKey *key);
void dstu_kdf_derive_subkey(const DstuKdfMasterKey *key,
                            uint64_t subkey_id,
                            const uint8_t *context,
                            uint8_t *out);
DstuStatus dstu_pwhash_hash_password(const uint8_t *password,
                                     size_t password_len,
                                     DstuPwhashStrength strength,
                                     char *out);
 bool dstu_pwhash_verify_password(const uint8_t *password, size_t password_len, const char *hash);
 DstuStatus dstu_randombytes_buf(uint8_t *buf, size_t len);
 DstuStatus dstu_secretbox_key_generate(DstuSecretboxKey **out);
 DstuSecretboxKey *dstu_secretbox_key_from_bytes(const uint8_t *key);
 void dstu_secretbox_key_bytes(const DstuSecretboxKey *key, uint8_t *out);
 void dstu_secretbox_key_free(DstuSecretboxKey *key);
DstuStatus dstu_secretbox_seal(const DstuSecretboxKey *key,
                               const uint8_t *plaintext,
                               size_t plaintext_len,
                               uint8_t *sealed_out,
                               size_t sealed_out_cap,
                               size_t *sealed_len_out);
DstuStatus dstu_secretbox_open(const DstuSecretboxKey *key,
                               const uint8_t *sealed,
                               size_t sealed_len,
                               uint8_t *plaintext_out,
                               size_t plaintext_out_cap,
                               size_t *plaintext_len_out);
 DstuStatus dstu_secretstream_key_generate(DstuSecretstreamKey **out);
 DstuSecretstreamKey *dstu_secretstream_key_from_bytes(const uint8_t *key);
 void dstu_secretstream_key_bytes(const DstuSecretstreamKey *key, uint8_t *out);
 void dstu_secretstream_key_free(DstuSecretstreamKey *key);
DstuStatus dstu_secretstream_push_init(const DstuSecretstreamKey *key,
                                       DstuPushState **out,
                                       uint8_t *header_out);
 bool dstu_secretstream_push_is_finalized(const DstuPushState *state);
DstuStatus dstu_secretstream_push(DstuPushState *state,
                                  DstuTag tag,
                                  const uint8_t *plaintext,
                                  size_t plaintext_len,
                                  uint8_t *ciphertext_out,
                                  size_t ciphertext_out_len,
                                  uint8_t *tag_out);
 void dstu_secretstream_push_free(DstuPushState *state);
 DstuPullState *dstu_secretstream_pull_init(const DstuSecretstreamKey *key, const uint8_t *header);
 bool dstu_secretstream_pull_is_finalized(const DstuPullState *state);
DstuStatus dstu_secretstream_pull(DstuPullState *state,
                                  uint8_t tag_byte,
                                  const uint8_t *ciphertext,
                                  size_t ciphertext_len,
                                  const uint8_t *auth_tag,
                                  uint8_t *plaintext_out,
                                  size_t plaintext_out_len,
                                  DstuTag *tag_out);
 void dstu_secretstream_pull_free(DstuPullState *state);
 DstuStatus dstu_selftest(void);
 DstuStatus dstu_sign_key_generate(DstuSigningKey **out);
 DstuStatus dstu_sign_key_from_bytes(const uint8_t *d, DstuSigningKey **out);
 void dstu_sign_key_bytes(const DstuSigningKey *key, uint8_t *out);
 void dstu_sign_key_free(DstuSigningKey *key);
 DstuVerifyingKey *dstu_sign_verifying_key(const DstuSigningKey *key);
 void dstu_verifying_key_to_bytes(const DstuVerifyingKey *key, uint8_t *out);
 DstuVerifyingKey *dstu_verifying_key_from_bytes(const uint8_t *bytes);
 void dstu_verifying_key_free(DstuVerifyingKey *key);
void dstu_sign(const DstuSigningKey *key,
               const uint8_t *message,
               size_t message_len,
               uint8_t *sig_out);
 void dstu_sign_digest(const DstuSigningKey *key, const uint8_t *digest, uint8_t *sig_out);
bool dstu_verify(const DstuVerifyingKey *key,
                 const uint8_t *message,
                 size_t message_len,
                 const uint8_t *sig);
 bool dstu_verify_digest(const DstuVerifyingKey *key, const uint8_t *digest, const uint8_t *sig);
 DstuStatus dstu_stream_key_generate(DstuStreamKey **out);
 DstuStreamKey *dstu_stream_key_from_bytes(const uint8_t *key);
 void dstu_stream_key_bytes(const DstuStreamKey *key, uint8_t *out);
 void dstu_stream_key_free(DstuStreamKey *key);
DstuStatus dstu_stream_encrypt(const DstuStreamKey *key,
                               const uint8_t *plaintext,
                               size_t plaintext_len,
                               uint8_t *sealed_out,
                               size_t sealed_out_cap,
                               size_t *sealed_len_out);